--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -11,7 +11,7 @@
             %li our coding sessions. They are on every Wednesday between 18:30-21:00 (40 people or more)
             %li our courses. They are always on weekends, usually Saturdays. (20 people)
             %li our monthly meetups. We don't have a definite day planned for this yet.
-        %li providing food for any of our events. Gluten free food is a plus!
+        %li providing food for any of our events. Gluten-free food is a plus!
         %li
           helping us with monetary sponsorship so we can cover some of our
           =link_to "existing costs", "https://github.com/codebar/planner/issues/59"
