show student note on invitation page

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -69,6 +69,8 @@
           %li.attendance
             .two-thirds
               =invitation.member.full_name
+              %br
+              %em=invitation.note
     .medium-6.columns
       %h4 Coaches
       %ol.attendances
