--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -8,7 +8,7 @@
         We need money to keep Codebar free and be able to reach out to more places. If you would like to partner up with us and offer long-term support or just to make a substantial donation, #{mail_to "despo@codebar.io", "send me an email"}.
 
       %p
-        Other ways to help include: providing space, or getting food for one of our events. Have a look at our #{link_to "events calendar", "http://calendar.codebar.io"} and me send an email to book a date.
+        Other ways to help include: providing space, or getting food for one of our events. Have a look at our #{link_to "events calendar", "http://calendar.codebar.io"} and send me an email to book a date.
 
       %p
         Despo Pentara, Founder
