--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -22,3 +22,7 @@
       %br
     .large-3.columns
       = render partial: 'shared/social_media'
+  .row
+    .large-12.columns
+      = link_to "https://www.gosquared.com/", title: "GoSquared.com" do
+        =image_tag "https://dl.dropboxusercontent.com/u/108831317/gosq.png"
