--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -2,16 +2,31 @@
 %section#banner
   .container
     .row
-      .medium-9.columns
+      .medium-8.columns
         %p
           Codebar is an initiative aiming to bridge the diversity gap in the tech industry by running free weekly coding workshops and other programming related events aimed at women, LGBTQ and people otherwise underrepresented.
         %p
           Do you have any questions? Have a look at our #{link_to "FAQ", faq_path}.
-      .medium-3.columns
-        .panel.callout
-          =link_to "Sign up as a student", new_member_path(role:"student"), class: 'button expand round'
-          =link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button expand round'
+      .medium-4.columns
+        =link_to "Sign up as a student", new_member_path(role:"student"), class: 'button round expand'
+        =link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
 
+%section
+  .container
+    .row
+      %hr
+      .medium-6.columns
+        .panel.callout
+          %h4 Codebar is coming to Cambridge!
+          %p
+            We have teamed up with
+            =link_to "Cambridge Women And Tech", "http://camtechwomen.wordpress.com/"
+            to roll out our workshops in Cambridge!
+            %br
+            Subscribe to receive updates about Cambridge.
+
+          .text-right
+            =link_to "Subscribe", "http://eepurl.com/WyEVb", class: "button round", target: "_blank"
 
 %section
   .events
