--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -20,7 +20,7 @@
           %h4 Codebar is coming to Cambridge!
           %p
             We have teamed up with
-            =link_to "Cambridge Women And Tech", "http://camtechwomen.wordpress.com/"
+            =link_to "Cambridge Women in Tech", "http://camtechwomen.wordpress.com/"
             to roll out our workshops in Cambridge!
             %br
             Subscribe to receive updates about Cambridge.
