create chapters and groups

--- a/app/views/admin/workshop/index.html.haml
+++ b/app/views/admin/workshop/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'admin/shared/title', locals: { title: "Manage attendees", date: nil }
+%h1 Manage attendees
 %section#admin
   - @sessions.each do |session|
     .row
