--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -1,14 +1,31 @@
-= render partial: 'shared/title', locals: { title: "Admin", date: nil }
-%section#admin
+%section#banner
   .row
     .large-4.columns
-      .panel
-        =link_to "Manage attendances", admin_workshop_index_path, class: 'button round expand'
-
+      %h3 My chapters
+      %ul.side-nav
+        - @chapters.each do |chapter|
+          %li
+            = link_to chapter.name, [ :admin, chapter ]
     .large-4.columns
-      .panel
-        =link_to "View feedback", admin_feedback_index_path, class: 'button round expand'
-
+      %h3 Sponsors
+      %ul.side-nav
+        - @sponsors.each do |sponsor|
+          %li
+            = link_to sponsor.name, [ :admin, sponsor ]
     .large-4.columns
-      .panel
-        =link_to "Approve jobs (#{@jobs_pending_approval})", admin_jobs_path, class: 'button round expand'
+      %h3 Workshops
+      %ul.side-nav
+        - @workshops.each do |workshop|
+          %li
+            link_to workshop.name, admin_workshop_path
+            %hr
+  .row
+    .large-4.columns
+      %h3 Groups
+      %ul.no-bullet
+        - @groups.each do |group|
+          %li
+            = group.name
+            %hr
+    .large-4.columns
+      %h3 Subscriptions
