--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -53,20 +53,20 @@
               .large-4.medium-6.columns
                 %ul.pricing-table.workshop{ "data-equalizer-watch" => '' }
                   %li.title
-                    Coding Workshop
-                    - if workshop.location.present?
-                      (#{workshop.location})
+                    Workshop
+                    (#{workshop.chapter.name})
                   %li.description
                     = humanize_date_with_time(workshop.date_and_time)
-                  %li.bullet-item
-                    = link_to workshop.host.name, workshop.host.website
-                    %br
-                    = AddressDecorator.decorate(workshop.host.address).to_html
+                  - if workshop.has_host?
+                    %li.bullet-item
+                      = link_to workshop.host.name, workshop.host.website
+                      %br
+                      = AddressDecorator.decorate(workshop.host.address).to_html
                   - if workshop.invitable?
                     %li.cta-button
                       - if logged_in?
                         = link_to "RSVP", invitations_path, class: "button round tiny"
-                  - else
+                  - elsif workshop.sign_up_url.present?
                     %li.cta-button
                       = link_to "Sign up", workshop.sign_up_url, class: "button round tiny"
 
