--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -7,25 +7,27 @@
           %li
             = link_to chapter.name, [ :admin, chapter ]
     .large-4.columns
+      %h3 Workshops
+      %ul.side-nav
+        - @workshops.each do |workshop|
+          %li
+            =link_to admin_workshop_path(workshop) do
+              %strong=workshop.chapter.name
+              %br
+              =humanize_date_with_time(workshop.date_and_time)
+  %hr
+  .row
+    .large-4.columns
+      h3 Groups
+      %ul.no-bullet
+        - @groups.each do |group|
+          %li
+            = group.name
+    .large-4.columns
+      %h3 Subscriptions
+    .large-4.columns
       %h3 Sponsors
       %ul.side-nav
         - @sponsors.each do |sponsor|
           %li
             = link_to sponsor.name, [ :admin, sponsor ]
-    .large-4.columns
-      %h3 Workshops
-      %ul.side-nav
-        - @workshops.each do |workshop|
-          %li
-            link_to workshop.name, admin_workshop_path
-            %hr
-  .row
-    .large-4.columns
-      %h3 Groups
-      %ul.no-bullet
-        - @groups.each do |group|
-          %li
-            = group.name
-            %hr
-    .large-4.columns
-      %h3 Subscriptions
