--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -27,6 +27,7 @@
           %ul.off-canvas-list
             %li
               %label Admin
+            %li=link_to "New workshop", new_admin_workshop_path
             %li=link_to "New chapter", new_admin_chapter_path
             %li=link_to "New group", new_admin_group_path
             %li
