--- a/app/views/admin/portal/index.html.haml
+++ b/app/views/admin/portal/index.html.haml
@@ -18,7 +18,7 @@
   %hr
   .row
     .large-4.columns
-      h3 Groups
+      %h3 Groups
       %ul.no-bullet
         - @groups.each do |group|
           %li
