--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -1,6 +1,6 @@
 = render partial: 'shared/title', locals: { title: "Invitations", date: nil }
 %section
-  - if current_member.is_student? and current_member.is_coach?
+  - if current_user.is_student? and current_user.is_coach?
     .inner-nav{ "data-magellan-expedition" => "fixed" }
       %dl.sub-nav
         .row
@@ -11,10 +11,10 @@
 
   .row
     .large-12.columns
-      - if current_member.is_student? and
+      - if current_user.is_student? and
         =render partial: "student"
 
-      - if current_member.is_student? and current_member.is_coach?
+      - if current_user.is_student? and current_user.is_coach?
         %hr
-      - if current_member.is_coach?
+      - if current_user.is_coach?
         =render partial: "coach"
