--- a/app/views/admin/groups/show.html.haml
+++ b/app/views/admin/groups/show.html.haml
@@ -1,9 +1,26 @@
-%h1
-  = @group.name
-  %small.subjeader #{@group.chapter.name}
-%hr
+%section#banner
+  .row
+    .large-12.columns
+      %h1
+        = @group.name
+        %small.subheader #{@group.chapter.name}
+  .row
+    .large-4.columns
+      %h3 Workshops
+      %ul.side-nav
+        - @group.chapter.workshops.each do |workshop|
+          %li
+            =link_to admin_workshop_path(workshop) do
+              %strong=workshop.chapter.name
+              %br
+              =humanize_date_with_time(workshop.date_and_time)
 
-%h3 Workshops
-
-%h3 Members
+    .large-4.columns
+      %h3 Members
+      %ul.side-nav
+        - @group.members.each do |member|
+          %li
+            %strong=member.full_name
+            %br
+            =@group.subscriptions.where(member: member).map(&:group).map { |g| "#{g.name} (#{g.chapter.name})" }.join(", ")
 
