--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @workshop], url: :admin_workshops, method: :update do |f|
+= simple_form_for [:admin, @workshop], url: :admin_workshop, method: :put do |f|
   .row
     .large-12.columns
       = f.association :chapter, as: :radio_buttons
