--- a/app/assets/stylesheets/partials/_layout.css.scss
+++ b/app/assets/stylesheets/partials/_layout.css.scss
@@ -22,3 +22,12 @@ footer {
     color: #774f9f;
   }
 }
+
+#profile {
+  vertical-align: top;
+  width: auto;
+  display: inline-block;
+  padding-top: 5px;
+  padding-bottom: 7px;
+  background-color: #444;
+}
