--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,30 +18,8 @@
           = render partial: 'layouts/messages'
 
         - if logged_in?
-          %aside.left-off-canvas-menu
-            %ul.off-canvas-list
-              - if current_user.is_admin? or current_user.is_organiser?
-                %li
-                  %label Manage
-                  %li.has-form
-                    = link_to "Dashboard", admin_root_path
-                %li=link_to "New workshop", new_admin_workshop_path
-              - if current_user.is_organiser? or current_user.is_admin?
-                %li=link_to "View feedback", admin_feedback_index_path
-              %li=link_to "Moderated Feedback", coach_feedback_index_path
-              - if current_user.is_admin?
-                %li=link_to "Review jobs (#{jobs_pending_approval})", admin_jobs_path
-              %li= link_to "Jobs", jobs_path
-              %li
-                %label Account
-              %li=link_to "Invitations", invitations_path
-              %li=link_to "Update Profile", profile_path
-              %li=link_to "Manage subscriptions", subscriptions_path
-              - if current_user.is_admin?
-                %li=link_to "New chapter", new_admin_chapter_path
-                %li=link_to "New group", new_admin_group_path
+          = render partial: "layouts/aside"
         = yield
-
 
         = render partial: 'layouts/footer'
         %a.exit-off-canvas
