--- a/app/views/admin/groups/show.html.haml
+++ b/app/views/admin/groups/show.html.haml
@@ -13,7 +13,7 @@
             =link_to admin_workshop_path(workshop) do
               %strong=workshop.chapter.name
               %br
-              =humanize_date_with_time(workshop.date_and_time)
+              =humanize_date_with_time(workshop.date_and_time, workshop.time)
 
     .large-4.columns
       %h3 Members
