--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -39,7 +39,7 @@
               =link_to invitation_path do
                 %dt
                   Coding Workshop
-                %dd= humanize_date_with_time(@next_session.date_and_time)
+                %dd= humanize_date_with_time(@next_session.date_and_time, @next_session.time)
             - if @meeting
               =link_to @meeting do
                 %dt= @meeting.title
