--- a/app/views/session_invitation_mailer/reminder.html.haml
+++ b/app/views/session_invitation_mailer/reminder.html.haml
@@ -24,7 +24,7 @@
               %td
                 %h4
                   Workshop
-                  %small #{l(@session.date_and_time, format: :email)}
+                  %small= humanize_date_with_time(@session.date_and_time, @session.time)
                 %p
                   #{@session.host.name}
                   %br
