--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -1,8 +1,20 @@
-.row
-  .large-4.columns
-    %h3=@sponsor.name
+%section#banner
+  .row
+    .large-4.columns
+      %h2=@sponsor.name
 
-.row
-  .large-4.columns
-    =image_tag @sponsor.avatar
+  .row
+    .large-4.columns
+      =image_tag @sponsor.avatar
+    .large-8.columns
+      %h3 Sponsored
+      - @sponsor.sessions.each do |workshop|
+        =link_to admin_workshop_path(workshop) do
+          %strong=workshop.chapter.name
+          %br
+          = humanize_date_with_time(workshop.date_and_time, workshop.time)
+
+  .row
+    .large-12.columns.text-right
+      =link_to "Edit", edit_admin_sponsor_path(@sponsor), class: 'button round'
 
