add email to chapter

--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -27,7 +27,7 @@
 
             - if @invitation.sessions.date_and_time-6.hours <= DateTime.now
               %p
-                If you can no longer make it, send a text at 07402887214 or email meetings@codebar.io so we can try to reallocate your spot.
+                If you can't make it or plan to arrive late please let us know by sending an email to #{@invitation.sessions.chapter.email}
             - else
               =link_to "I can no longer attend", reject_invitation_url(@invitation), class: "expand button round"
           - else
@@ -53,8 +53,10 @@
       %p
         = @host_address.to_html
       %p
-        %h5 Contact
-        Despo 07402887214
+        %h5 Organised by
+        - @invitation.sessions.chapter.organisers.each do |organiser|
+          = organiser.full_name
+          = organiser.mobile
 
   .row
     .large-12.columns
