--- a/app/views/course/invitation/show.html.haml
+++ b/app/views/course/invitation/show.html.haml
@@ -77,7 +77,9 @@
       %p
         = @host_address.to_html
       %p
-        %h5 Contact
-        Despo 07402887214
+        %h5 Organisers
+        - @invitation.course.chapter.organisers.each do |organiser|
+          = organiser.full_name
+          = organiser.mobile
 
   %br
