use chapter email instead of meetings@codebar

--- a/app/views/invitation/_student.html.haml
+++ b/app/views/invitation/_student.html.haml
@@ -4,4 +4,4 @@
 
 %p Please make sure you <b>bring your laptop</b> with you.
 
-%p PS: There will also be food at the workshop. We always make an effort to have vegetarian, vegan and gluten-free options avaialble. If you have any other dietary requirements, send us email at #{mail_to "meetings@codebar.io", "meetings@codebar.io"}.
+%p PS: There will also be food at the workshop. We always make an effort to have vegetarian, vegan and gluten-free options avaialble. If you have any other dietary requirements, send us email at #{mail_to @invitation.sessions.chapter.email, @invitation.sessions.chapter.email}.
